# duo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  compose.prod.yml  compose.yaml  compose.yml  infra.yml  justfile  pyproject.toml  services-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
common/: __init__.py  exceptions.py  game.py  models.py  secrets.py  token.py  users.py
common/logging/: config.json  config.prod.json  filters.py  formatters.py  main.py
common/types/: game.py
deploy/: Dockerfile  compose.yml
proto/: auth.proto  game.proto
scripts/: generate_key_pair_for_auth.py
services/api/: .env.example  .env.local  __init__.py  __main__.py  config.py  dependencies.py  exceptions.py  gunicorn_conf.py  infra.yaml  main.py  security.py  token.py
services/api/routers/: auth.py  games.py  users.py  websockets.py
services/api/routers/websockets/: __init__.py  manager.py  routes.py  types.py
services/api/schemas/: auth.py  games.py
services/auth/: .env.example  .env.local  __main__.py  alembic.ini  client.py  config.py  db.py  exceptions.py  infra.yaml  interceptors.py  main.py  models.py  password.py  queries.py  service.py  token.py
services/auth/alembic/: env.py
services/auth/alembic/versions/: 88c0a8ed2795_add_password_updated_at_to_user.py  ddd84dc75056_create_user_model.py  e21e130a4991_create_user_table.py
services/auth/db/: crud.py
services/auth/grpc/: interceptors.py  service.py
services/auth/tests/: conftest.py
services/auth/tests/unit/: test_password.py
services/game/: .env.example  __main__.py  alembic.ini  config.py  exceptions.py  infra.yaml  models.py
services/game/alembic/: env.py
services/game/alembic/versions/: 5a7c4239b6f1_.py  955d762b14f2_.py  b8ab88e9cae8_.py
services/game/db/: crud.py  engine.py  models.py
services/game/engines/: base.py  factory.py  tic_tac_toe.py
services/game/grpc/: interceptors.py
services/game/grpc/services/: game.py  game_move.py
services/game/tests/: conftest.py
services/game/tests/tic_tac_toe/: test_game_state_validation.py  test_get_player_view.py  test_get_winner.py  test_is_draw.py  test_is_move_possible.py  test_is_win.py  test_make_move.py  test_tic_tac_toe.py
services/game/tests/unit/tic_tac_toe/: test_is_move_possible.py  test_make_move.py
services/ui/: .env.example  .env.prod  .prettierrc  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
services/ui/src/: App.tsx  index.css  main.tsx
services/ui/src/components/: Error.tsx
services/ui/src/components/games/tic-tac-toe/: TicTacToe.tsx  TicTacToeBoard.tsx
services/ui/src/components/layout/: AppSidebar.tsx  PageLoading.tsx
services/ui/src/components/ui/: button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  separator.tsx  sheet.tsx  skeleton.tsx  sonner.tsx  spinner.tsx  tooltip.tsx
services/ui/src/components/ui/sidebar/: hooks.tsx  index.tsx
services/ui/src/features/auth/: Login.tsx  Register.tsx
services/ui/src/features/auth/components/: Login.tsx  Register.tsx
services/ui/src/features/auth/hooks/: useGetUser.ts  useLogin.ts  useRegister.ts
services/ui/src/features/auth/services/: auth.service.ts  user.service.ts
services/ui/src/features/auth/stores/: auth.ts
services/ui/src/features/auth/types/: token.ts
services/ui/src/features/games/: MainMenu.tsx  PlayGamePage.tsx
services/ui/src/features/games/components/: GameCard.tsx  MainMenu.tsx  PlayGamePage.tsx  WaitingForOpponent.tsx
services/ui/src/features/games/hooks/: useCreateGame.tsx  useFetchGame.tsx  useGameWebSocket.ts
services/ui/src/features/games/services/: game.service.ts
services/ui/src/features/games/types/: game.ts  tic-tac-toe.ts
services/ui/src/features/profile/: Settings.tsx
services/ui/src/features/profile/components/: Settings.tsx
services/ui/src/hooks/auth/: useLogin.ts  useRegister.ts
services/ui/src/hooks/game/: useCreateGame.tsx  useFetchGame.tsx
services/ui/src/lib/: api.ts
services/ui/src/router/: index.tsx
services/ui/src/services/: auth.service.ts  game.service.ts  user.service.ts
services/ui/src/shared/components/: Error.tsx
services/ui/src/shared/components/layout/: AppSidebar.tsx  MobileHeader.tsx  PageLoading.tsx  VerticalLayout.tsx
services/ui/src/shared/hooks/: useApiCall.ts
services/ui/src/shared/hooks/__tests__/: useApiCall.test.ts
services/ui/src/shared/lib/: api.ts
services/ui/src/shared/types/: api.ts
services/ui/src/stores/: auth.ts
services/ui/src/styles/: index.css
services/ui/src/types/: game.ts  tic-tac-toe.ts  user.ts
(+8 files in other folders)
