[project]
name = "duo"
version = "0.1.0"
description = "Turn based games for 2 people"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.5",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "protobuf>=6.33.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "sqlmodel>=0.0.32",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]


[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.11",
    "basedpyright>=1.37.1",
]


[tool.ruff]
line-length = 80
exclude = [
    "venv",
    ".venv",
    ".vscode",
    ".pytest_cache",
    "**/alembic/**",
    ".mypy_cache",
    ".ruff_cache",
    "generated", ]


[tool.ruff.lint]
extend-select = ["E501", "I", "N", "PT", "PL", "RUF"]
fixable = ["ALL"]


[tool.ruff.format]
quote-style = "single"
indent-style = "space"


[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
exclude = '(^|/)generated/'
disable_error_code = [
  "attr-defined",
  "arg-type",
  "call-arg",
  "no-untyped-def",
  "no-untyped-call",
]


[[tool.mypy.overrides]]
module = "generated.*"
disallow_untyped_defs = false


[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"

reportMissingImports = "error"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportAttributeAccessIssue = true
reportUnknownArgumentType = false


venv = ".venv"
venvPath = "."

include = ["services", "common"]
ignore = ["**/generated/**"]
exclude = [
    "services/ui/**",
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    ".vscode",
    ".pytest_cache",
    "**/migrations/**",
    ".mypy_cache",
    ".ruff_cache",
    "**/generated/**",
    "**/versions/**",
]
extraPaths = ["services", "common"]


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers --disable-warnings"
testpaths = ["services"]
norecursedirs = ["*.egg", ".git", "__pycache__"]

python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

pythonpath = [
    ".",
    "services",
    "generated",
]

markers = [
    "unit: fast unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
    "slow: slow tests"
]

filterwarnings = [
    "ignore::DeprecationWarning"
]
