[project]
name = "duo"
version = "0.1.0"
description = "Turn based games for 2 people"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.5",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "grpcio>=1.76.0",
    "protobuf>=6.33.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "sqlmodel>=0.0.32",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]


[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "basedpyright>=1.37.1",
    "grpcio-tools>=1.76.0",
    "mypy-protobuf>=5.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]


[tool.ruff]
line-length = 80
exclude = [
    "venv",
    ".venv",
    ".vscode",
    ".pytest_cache",
    "**/alembic/**",
    ".ruff_cache",
    "generated", ]


[tool.ruff.lint]
extend-select = ["E501", "I", "N", "PT", "PL", "RUF"]
fixable = ["ALL"]


[tool.ruff.format]
quote-style = "single"
indent-style = "space"


[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
extraPaths = ["generated"]
reportAttributeAccessIssue = true

venv = ".venv"
venvPath = "."

include = ["services", "common"]
exclude = [
    "services/ui/**",
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    ".vscode",
    ".pytest_cache",
    "**/migrations/**",
    ".ruff_cache",
    "**/versions/**",
    "generated/**/*_pb2.py", 
    "generated/**/*_pb2_grpc.py" 
]


[tool.pytest.ini_options]
minversion = "7.0"
addopts = """
-ra 
--strict-markers 
--disable-warnings
"""
testpaths = ["services"]
norecursedirs = ["*.egg", ".git", "__pycache__"]

python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

pythonpath = [
    ".",
    "services",
    "generated",
]

markers = [
    "unit: fast unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
    "slow: slow tests"
]

filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "ui",
]
